implementing modal and dark mode header fixes on the home page
Former-commit-id: 370828db742f1b94b7ecf21eeefb13363958664b
Former-commit-id: dba9590da6c68d7af5a2bebd8cb8e9d4af1c74ea
Former-commit-id: 4b42a97d65614f70bfbe0555ad816ebc09ad1e06
Former-commit-id: 225b4839d10f67563e5ccab1eb68bd3be7399c9d
Former-commit-id: a34b47d32a4b995fb3d44ef92f96079c57bd3e7d
Former-commit-id: 2cbfca299764ac1e1d68547f45bf9bd00aba7456

--- a/assets/base.css
+++ b/assets/base.css
@@ -3704,10 +3704,15 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 }
 
 	.centered-text p {text-align: center; max-width: 550px; margin: 0 auto; }
-	
+	.ct-home {
+		margin-bottom: 8rem;
+	}
 	.ct-home h2 { font-size: 4rem; }
-	.ct-home p { max-width: 100%; }
-
+	.ct-home p { max-width: 100%;
+	margin-bottom: 4rem; }
+.ct-home .product-tiles {
+	padding-bottom: 0;
+}
 .pull-quote {
 	width: 90%;
 	max-width: 600px;
